# bnb-market-regime-oracle

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEMO_VIDEO_SCRIPT.md  Dockerfile  LICENSE  README.md  SUBMISSION.md  SUBMISSION_FORM_FIELDS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: DEMO_SCRIPT.md  architecture.md  demo.html  test-output.txt
packaging/cmc-skill/: README.md  mcp_config.json  skill.json  skill.md
results/: dataset.csv  equity_curve.csv  metrics.json  posture_mapping.csv  regime_distribution.csv  regime_timeseries.csv  signal_weights.csv  trades.csv
scripts/: demo.sh  generate_demo.py
src/market_regime_oracle/: __init__.py  config.py  mcp_server.py  run.py
src/market_regime_oracle/backtest/: __init__.py  engine.py
src/market_regime_oracle/classifier/: __init__.py  fusion.py
src/market_regime_oracle/data/: __init__.py  alternative_me.py  coingecko.py  http.py  loader.py
src/market_regime_oracle/signals/: __init__.py  base.py  exchange_flows.py  fear_greed.py  funding.py  momentum.py  volatility.py
src/market_regime_oracle/viz/: __init__.py  charts.py
tests/: _mcp_smoke.py  conftest.py  test_backtest.py  test_classifier.py  test_signals.py
